<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2016 jeasonlzy(廖子尧)
    
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    
       http://www.apache.org/licenses/LICENSE-2.0
       
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal"
              android:paddingBottom="10dp"
              android:focusableInTouchMode="false"
              android:focusable="false"
              android:paddingTop="10dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="5dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginLeft="20dp"
        android:src="@mipmap/ic_launcher_round"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/app_names"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/priority"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:visibility="visible"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/downloadSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/netSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/speeds"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/netSpeed"
                android:layout_marginBottom="6dp"
                android:text="@string/progress"
                android:textColor="@color/white"
                android:visibility="gone"
                android:textSize="14sp"/>

        </RelativeLayout>

        <com.fengjw.tvhelper.update.utils.NumberProgressBar
            android:id="@+id/pbProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:progress_reached_bar_height="1.5dp"
            app:progress_reached_color="#3498DB"
            app:progress_text_color="#3498DB"
            app:progress_text_size="14sp"
            app:progress_unreached_bar_height="1dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            app:progress_unreached_color="#CCCCCC"
            />
    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/download"
        android:background="@drawable/button"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:textColor="#fff"/>

    <Button
        android:id="@+id/remove"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/delete"
        android:textColor="#fff"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/restart"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/redownload"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:background="@drawable/button"
        android:textColor="#fff"/>
</LinearLayout>
