<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linear_app"
              android:orientation="vertical"
              android:gravity="center"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_width="180dp"
              android:layout_height="180dp">

    <ImageView
        android:id="@+id/image_app"
        android:layout_width="120dp"
        android:layout_height="120dp"/>

    <TextView
        android:id="@+id/name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/name"
        android:lines="1"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/size_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/cachesize_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_stoprun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/stoprun"
        android:visibility="gone"/>
</LinearLayout>